--- a/app/src/main/res/layout/activity_show_other_status.xml
+++ b/app/src/main/res/layout/activity_show_other_status.xml
@@ -14,64 +14,64 @@
         android:layout_alignParentTop="true"
         android:id="@+id/parent_progress_bar_layout" />
 
-    <!--    <androidx.appcompat.widget.Toolbar-->
-    <!--        android:layout_below="@id/parent_progress_bar_layout"-->
-    <!--        android:id="@+id/toolbar_status"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="?attr/actionBarSize"-->
-    <!--        app:contentInsetLeft="0dp"-->
-    <!--        app:contentInsetStart="0dp"-->
-    <!--        android:theme="@style/MyToolbarTheme">-->
+    <androidx.appcompat.widget.Toolbar
+        android:layout_below="@id/parent_progress_bar_layout"
+        android:id="@+id/toolbar_status"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        android:theme="@style/MyToolbarTheme">
 
-    <!--        <LinearLayout-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:gravity="center_vertical"-->
-    <!--            android:orientation="horizontal">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-    <!--            <ImageView-->
-    <!--                android:id="@+id/toolbar_back_button"-->
-    <!--                android:layout_width="25dp"-->
-    <!--                android:layout_height="25dp"-->
-    <!--                android:foreground="?attr/selectableItemBackground"-->
-    <!--                android:src="@drawable/ic_arrow_back_black_24dp" />-->
+            <ImageView
+                android:id="@+id/toolbar_back_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:src="@drawable/ic_arrow_back_black_24dp" />
 
-    <!--            <de.hdodenhof.circleimageview.CircleImageView-->
-    <!--                android:id="@+id/avatar_chat_room"-->
-    <!--                android:layout_width="40dp"-->
-    <!--                android:layout_height="40dp"-->
-    <!--                android:src="@mipmap/ic_launcher" />-->
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/avatar_status_user"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@mipmap/ic_launcher" />
 
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_marginLeft="8dp"-->
-    <!--                android:orientation="vertical">-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:orientation="vertical">
 
-    <!--                <TextView-->
-    <!--                    android:id="@+id/username_chat_room"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="0dp"-->
-    <!--                    android:layout_weight="1"-->
-    <!--                    android:gravity="bottom"-->
-    <!--                    android:text="Imam Candra Kusuma"-->
-    <!--                    android:textColor="@android:color/white"-->
-    <!--                    android:textStyle="bold" />-->
+                <TextView
+                    android:id="@+id/tv_status_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="bottom"
+                    android:text="Imam Candra Kusuma"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
-    <!--                <TextView-->
-    <!--                    android:id="@+id/last_seen_and_online"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="0dp"-->
-    <!--                    android:layout_weight="1"-->
-    <!--                    android:gravity="top"-->
-    <!--                    android:text="last seen today at 3:26 PM"-->
-    <!--                    android:textColor="#eef4f4"-->
-    <!--                    android:textSize="12sp" />-->
-    <!--            </LinearLayout>-->
+                <TextView
+                    android:id="@+id/tv_status_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="top"
+                    android:text="last seen today at 3:26 PM"
+                    android:textColor="#eef4f4"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-    <!--        </LinearLayout>-->
+        </LinearLayout>
 
-    <!--    </androidx.appcompat.widget.Toolbar>-->
+    </androidx.appcompat.widget.Toolbar>
 
     <AdapterViewFlipper
         android:layout_below="@id/parent_progress_bar_layout"
