--- a/app/src/main/res/layout/item_chat_incoming.xml
+++ b/app/src/main/res/layout/item_chat_incoming.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint_layout_chat_out"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentLeft="true"
-    android:layout_marginEnd="30dp"
-    android:layout_marginRight="30dp"
-    android:background="@drawable/bubble_incoming">
+    android:layout_marginRight="30dp">
 
-    <TextView
-        android:id="@+id/tv_chat_incoming"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_first_incoming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/tv_time_chat_incoming"
-        android:text="in adalah text nya bos akhirnya bisa sukses hahahahaha panjang kan nih"
-        android:textColor="@android:color/black" />
+        android:background="@drawable/bubble_incoming"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_time_chat_incoming"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="8dp"
-        android:text="10:10 PM"
-        android:textSize="12sp" />
+        <LinearLayout
+            android:id="@+id/layout_chat_incoming"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toLeftOf="@id/tv_time_chat_incoming"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/layout_first">
+            <!--            app:layout_constraintEnd_toStartOf="@id/tv_time_chat_outgoing"-->
+
+            <TextView
+                android:id="@+id/tv_chat_incoming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ini adalah yanhgjhskfjfasdfa bisa gini gangerti "
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_time_chat_incoming"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10:10 PM"
+            android:textSize="12sp"
+            android:layout_marginLeft="6dp"
+            app:layout_constraintBottom_toBottomOf="@id/layout_first"
+            app:layout_constraintRight_toRightOf="@id/layout_first" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
